[gd_scene load_steps=2 format=3 uid="uid://xxag6ktk3asg"]

[ext_resource type="Script" uid="uid://dhagsw3bh8bt2" path="res://scripts/loading_screen.gd" id="1_loading"]

[node name="LoadingScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_loading")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="GameTitle" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Đang tải game..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 20)
layout_mode = 2
step = 1.0
show_percentage = false

[node name="LoadingLabel" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Đang khởi tạo..."
horizontal_alignment = 1

[node name="SkipHint" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Nhấn phím bất kỳ để bỏ qua"
horizontal_alignment = 1

[node name="LoadingTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="LoadingTimer" to="." method="_on_loading_timer_timeout"]
